--- a/ToDoList.html
+++ b/ToDoList.html
@@ -39,11 +39,12 @@
 
 	<div class="tasks">
 		<div class="task">
-			<input 
+			<ul> <input 
 			type="checkbox" id="task3"
-		/>
+
 		<label for=task-3></label>
 		wash dishes
+		</ul>
 <!--when you click now it will check the box-->
 		
 	</div>
