--- a/ToDoList.html
+++ b/ToDoList.html
@@ -10,60 +10,23 @@
 
 <body style="background-color: #FFB6C1">
 <div id="home">
-	
-<h1> Things I need to do: <img src="Plus Sign.png" width="50px">  </h1>
-	<h2 class="task-list-title"> My Lists </h2>
-<div id="todolist">
-	
-	<div class="tasks">
-		<div class="task">
-			<input 
-			type="checkbox" id="task1"
-		/>
-		<label for=task-1></label>
-		walk dog
-<!--when you click now it will check the box-->
-		
-	</div>
-
-	<div class="tasks">
-		<div class="task">
-			<input 
-			type="checkbox" id="task2"
-		/>
-		<label for=task-2></label>
-		finish hw
-<!--when you click now it will check the box-->
-		
-	</div>
-
-	<div class="tasks">
-		<div class="task">
-			<ul> <input 
-			type="checkbox" id="task3"
-
-		<label for=task-3></label>
-		wash dishes
-		</ul>
-<!--when you click now it will check the box-->
+<h1> TO-DO LIST: </h1>
+	<h2 class="task-list-title"> Tasks: </h2>
+<div id="todolist" class="container">
 		
 	</div>
 		
 	</div>
 	<div class="new-task-create"></div>
-	 <form action="">
- 	<input 
- 		type="text" 
- 		class="new task"
- 		placeholder="add a task.." 
- 		/>
- 		<button class="btn task">add</button>
+	 <form action=""> <ul><ul>
+ 	<input type="text"  id="textfield" type="checkbox"
+<div id="add">
+		<button>add</button> 
+	</div>
  </form>
- <div class="clear-task">
- 	<button class="btn delete">delete last</button>
- 	<button class= "btn delete">clear all</button>
- </div>
+
 <!--allows to add onto list -->
+
 </div>
 </body>
 </html>
