--- a/ToDoList.html
+++ b/ToDoList.html
@@ -18,7 +18,7 @@
 		
 	</div>
 	<div class="new-task-create"></div>
-	 <form action=""> <ul><ul>
+	 <form action=""> <li></li>
  	<input type="text"  id="textfield" type="checkbox"
 <div id="add">
 		<button>add</button> 
